cluster/apps/development/fifa-openapi/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: fifa-openapi
  namespace: development
spec:
  selector:
    app: fifa-openapi
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8080
